# vsr

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
configs/: datasets.yaml  example.yaml  m3_kang.yaml  m3_wanggao.yaml  m4a_eligibility_manifest.yaml  m4a_v1_conflict.yaml  m4a_v1_conflict_pilot.yaml  m4a_v1_contrastive_pairs.yaml  m4a_v1_counterbalanced.yaml  m4a_v1_counterbalanced_pilot.yaml  m4a_v1_counterbalanced_pilot_j2.yaml  m4a_v1_natural_congruent.yaml  m4a_v1_natural_congruent_pilot.yaml  m4a_v1_size_calibration.yaml  m4a_v1_solo.yaml  size_calibration.yaml  stimuli_v0_congruent.yaml
docs/: CITATION_LEDGER.md  IMPLEMENTATION_PLAN.md  M4A_S5_CRITERIA-reviewer.md  M4A_S5_CRITERIA.md  M4A_SOLO_PROTOCOL.md  M4a_SESSION_PROMPT.md  PITCH.md  PROJECT_MEMORY.md  REJECTED_DESIGNS.md  REVIEW_RESPONSE_2026-07-16_1.md  R_RATIFICATION_PROTOCOL.md  SEED_LEDGER.md  VSR_niches_critical_deep_read.md  dataset.pptx  dataset_ja.pptx  dataset_zh.pptx  lab_presentation_partA.pptx  lab_presentation_partB.pptx  research_proposal_spatial_binding.md  vsr_landscape_v8.pptx
reports/: checkpoint_briefing.md  leak_ceiling_v1.md  m0_m2_audit.md  m3_reproduction.md  m4a_area_validity_F1.1900.txt  m4a_battery.md  m4a_conflict_pilot_analysis.json  m4a_corrected_baseline_ledger.json  m4a_counterbalanced_pilot_analysis.json  m4a_cue_constants.md  m4a_cumulative_ledger.json  m4a_deterministic_extremes.json  m4a_deterministic_extremes_SUPERSEDED_centre_filter.json  m4a_deterministic_extremes_corrected.json  m4a_deterministic_extremes_pass2.json  m4a_deterministic_extremes_pass3.json  m4a_deterministic_extremes_refine1.json  m4a_escape_hatch_gaps1.95.json  m4a_escape_hatch_gaps2.55.json  m4a_floor_fixedpoint_iter1.json  m4a_floor_joint_acceptance.md  m4a_floor_root_search.json  m4a_natural_congruent_decision.md  m4a_natural_congruent_options.json  m4a_natural_congruent_pilot_analysis.json  m4a_pass2_violation_coords.json  m4a_placement_background_rate.md  m4a_s5_candidate_F1.1900.json  m4a_s5_sweep_floor1232_candidate.json  m4a_s5_sweep_natural_congruent.json  m4a_selection_bounds.json  m4a_smoke_analysis.json  m4a_solo_camera_calibration.json
scripts/: README.md  backfill_mask_area.py  baseline_decomposition.py  calibrate_sizes.py  contact_sheet.py  cumulative_extrema_ledger.py  dataset_contact_sheet.py  derive_cue_constants.py  deterministic_cue_extremes.py  download_dataset.py  dryrun_factor_coupling.py  export_dataset.py  floor_root_search.py  floor_squeeze.py  forensic_pose_reproduction.py  kang_dose_response.py  kang_repro.py  leak_ceiling.py  m4a_analyze_stimuli.py  measure_silhouettes.py  natural_congruent_options.py  rejection_bias.py  render_stimuli.py  s5_assignment_sweep.py  solo_camera_calibration.py  validate_stimuli.py  wanggao_repro.py  worldx_identifiability.py
tests/: test_baseline_decomposition.py  test_baseline_taxonomy.py  test_config.py  test_cue_constants.py  test_datasets.py  test_eligibility_invariants.py  test_geometry.py  test_gpu.py  test_grid_scenes.py  test_instrument_audit.py  test_logging.py  test_pooling.py  test_probes.py  (+5 more)
(+58 files in other folders)
